# example-haskell-project

./: .ghc.environment.x86_64-darwin-8.4.4  .ghc.environment.x86_64-darwin-8.6.5  .ghc.environment.x86_64-darwin-8.8.3  CHANGELOG.md  example-haskell-project.cabal
.circleci/: config.yml
src/Example/: Module.hs
