cabal-version:       2.4

name:                example-haskell-project
version:             0.1.0.0
synopsis:            Example Haskell Project
description:         Example Haskell Project that demostrates how to get a simple project up and running with Circle CI.
homepage:            https://github.com/haskell-works/example-haskell-project
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Ky
maintainer:          newhoggy@gmail.com
-- copyright:
category:            Example
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-works/example-haskell-project

library
  exposed-modules:
    Example.Module
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>= 4.10.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example-haskell-project
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.11.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

